--- a/dataCleaning.ipynb
+++ b/dataCleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "4  dataset-of-1960s.csv  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
        "[41106 rows x 20 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1005,7 @@
        "[41106 rows x 20 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1047,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
        "max      169.000000      1.000000   2010.000000  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1524,7 +1524,7 @@
        "4    1960  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1536,7 +1536,405 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track</th>\n",
+       "      <th>artist</th>\n",
+       "      <th>url</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>...</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>time_signature</th>\n",
+       "      <th>chorus_hit</th>\n",
+       "      <th>sections</th>\n",
+       "      <th>hit</th>\n",
+       "      <th>decade</th>\n",
+       "      <th>duration_min</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jealous Kind Of Fella</td>\n",
+       "      <td>Garland Green</td>\n",
+       "      <td>https://open.spotify.com/track/1dtKN6wwlolkM8X...</td>\n",
+       "      <td>0.417</td>\n",
+       "      <td>0.620</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-7.727</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0403</td>\n",
+       "      <td>0.4900</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0779</td>\n",
+       "      <td>0.8450</td>\n",
+       "      <td>185.655</td>\n",
+       "      <td>173533</td>\n",
+       "      <td>3</td>\n",
+       "      <td>32.94975</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>2.892</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Initials B.B.</td>\n",
+       "      <td>Serge Gainsbourg</td>\n",
+       "      <td>https://open.spotify.com/track/5hjsmSnUefdUqzs...</td>\n",
+       "      <td>0.498</td>\n",
+       "      <td>0.505</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-12.475</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0337</td>\n",
+       "      <td>0.0180</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.1760</td>\n",
+       "      <td>0.7970</td>\n",
+       "      <td>101.801</td>\n",
+       "      <td>213613</td>\n",
+       "      <td>4</td>\n",
+       "      <td>48.82510</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>3.560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Melody Twist</td>\n",
+       "      <td>Lord Melody</td>\n",
+       "      <td>https://open.spotify.com/track/6uk8tI6pwxxdVTN...</td>\n",
+       "      <td>0.657</td>\n",
+       "      <td>0.649</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-13.392</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0380</td>\n",
+       "      <td>0.8460</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.1190</td>\n",
+       "      <td>0.9080</td>\n",
+       "      <td>115.940</td>\n",
+       "      <td>223960</td>\n",
+       "      <td>4</td>\n",
+       "      <td>37.22663</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>3.733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mi Bomba Sonó</td>\n",
+       "      <td>Celia Cruz</td>\n",
+       "      <td>https://open.spotify.com/track/7aNjMJ05FvUXACP...</td>\n",
+       "      <td>0.590</td>\n",
+       "      <td>0.545</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-12.058</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1040</td>\n",
+       "      <td>0.7060</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0610</td>\n",
+       "      <td>0.9670</td>\n",
+       "      <td>105.592</td>\n",
+       "      <td>157907</td>\n",
+       "      <td>4</td>\n",
+       "      <td>24.75484</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>2.632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Uravu Solla</td>\n",
+       "      <td>P. Susheela</td>\n",
+       "      <td>https://open.spotify.com/track/1rQ0clvgkzWr001...</td>\n",
+       "      <td>0.515</td>\n",
+       "      <td>0.765</td>\n",
+       "      <td>11</td>\n",
+       "      <td>-3.515</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1240</td>\n",
+       "      <td>0.8570</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.2130</td>\n",
+       "      <td>0.9060</td>\n",
+       "      <td>114.617</td>\n",
+       "      <td>245600</td>\n",
+       "      <td>4</td>\n",
+       "      <td>21.79874</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>4.093</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41101</th>\n",
+       "      <td>Lotus Flowers</td>\n",
+       "      <td>Yolta</td>\n",
+       "      <td>https://open.spotify.com/track/4t1TljQWJ6ZuoSY...</td>\n",
+       "      <td>0.172</td>\n",
+       "      <td>0.358</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-14.430</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0342</td>\n",
+       "      <td>0.8860</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.3140</td>\n",
+       "      <td>0.0361</td>\n",
+       "      <td>72.272</td>\n",
+       "      <td>150857</td>\n",
+       "      <td>4</td>\n",
+       "      <td>24.30824</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2.514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41102</th>\n",
+       "      <td>Calling My Spirit</td>\n",
+       "      <td>Kodak Black</td>\n",
+       "      <td>https://open.spotify.com/track/2MShy1GSSgbmGUx...</td>\n",
+       "      <td>0.910</td>\n",
+       "      <td>0.366</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-9.954</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0941</td>\n",
+       "      <td>0.0996</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.2610</td>\n",
+       "      <td>0.7400</td>\n",
+       "      <td>119.985</td>\n",
+       "      <td>152000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>32.53856</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2.533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41103</th>\n",
+       "      <td>Teenage Dream</td>\n",
+       "      <td>Katy Perry</td>\n",
+       "      <td>https://open.spotify.com/track/55qBw1900pZKfXJ...</td>\n",
+       "      <td>0.719</td>\n",
+       "      <td>0.804</td>\n",
+       "      <td>10</td>\n",
+       "      <td>-4.581</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0355</td>\n",
+       "      <td>0.0132</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.1390</td>\n",
+       "      <td>0.6050</td>\n",
+       "      <td>119.999</td>\n",
+       "      <td>227760</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20.73371</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>3.796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41104</th>\n",
+       "      <td>Stormy Weather</td>\n",
+       "      <td>Oscar Peterson</td>\n",
+       "      <td>https://open.spotify.com/track/4o9npmYHrOF1rUx...</td>\n",
+       "      <td>0.600</td>\n",
+       "      <td>0.177</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-16.070</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0561</td>\n",
+       "      <td>0.9890</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.1490</td>\n",
+       "      <td>0.5600</td>\n",
+       "      <td>120.030</td>\n",
+       "      <td>213387</td>\n",
+       "      <td>4</td>\n",
+       "      <td>21.65301</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>3.556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41105</th>\n",
+       "      <td>Dust</td>\n",
+       "      <td>Hans Zimmer</td>\n",
+       "      <td>https://open.spotify.com/track/2khIaVUkbMmDHB5...</td>\n",
+       "      <td>0.121</td>\n",
+       "      <td>0.123</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-23.025</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0443</td>\n",
+       "      <td>0.9640</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.1030</td>\n",
+       "      <td>0.0297</td>\n",
+       "      <td>95.182</td>\n",
+       "      <td>341396</td>\n",
+       "      <td>4</td>\n",
+       "      <td>71.05343</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>5.690</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>41106 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       track            artist  \\\n",
+       "0      Jealous Kind Of Fella     Garland Green   \n",
+       "1              Initials B.B.  Serge Gainsbourg   \n",
+       "2               Melody Twist       Lord Melody   \n",
+       "3              Mi Bomba Sonó        Celia Cruz   \n",
+       "4                Uravu Solla       P. Susheela   \n",
+       "...                      ...               ...   \n",
+       "41101          Lotus Flowers             Yolta   \n",
+       "41102      Calling My Spirit       Kodak Black   \n",
+       "41103          Teenage Dream        Katy Perry   \n",
+       "41104         Stormy Weather    Oscar Peterson   \n",
+       "41105                   Dust       Hans Zimmer   \n",
+       "\n",
+       "                                                     url  danceability  \\\n",
+       "0      https://open.spotify.com/track/1dtKN6wwlolkM8X...         0.417   \n",
+       "1      https://open.spotify.com/track/5hjsmSnUefdUqzs...         0.498   \n",
+       "2      https://open.spotify.com/track/6uk8tI6pwxxdVTN...         0.657   \n",
+       "3      https://open.spotify.com/track/7aNjMJ05FvUXACP...         0.590   \n",
+       "4      https://open.spotify.com/track/1rQ0clvgkzWr001...         0.515   \n",
+       "...                                                  ...           ...   \n",
+       "41101  https://open.spotify.com/track/4t1TljQWJ6ZuoSY...         0.172   \n",
+       "41102  https://open.spotify.com/track/2MShy1GSSgbmGUx...         0.910   \n",
+       "41103  https://open.spotify.com/track/55qBw1900pZKfXJ...         0.719   \n",
+       "41104  https://open.spotify.com/track/4o9npmYHrOF1rUx...         0.600   \n",
+       "41105  https://open.spotify.com/track/2khIaVUkbMmDHB5...         0.121   \n",
+       "\n",
+       "       energy  key  loudness  mode  speechiness  acousticness  ...  liveness  \\\n",
+       "0       0.620    3    -7.727     1       0.0403        0.4900  ...    0.0779   \n",
+       "1       0.505    3   -12.475     1       0.0337        0.0180  ...    0.1760   \n",
+       "2       0.649    5   -13.392     1       0.0380        0.8460  ...    0.1190   \n",
+       "3       0.545    7   -12.058     0       0.1040        0.7060  ...    0.0610   \n",
+       "4       0.765   11    -3.515     0       0.1240        0.8570  ...    0.2130   \n",
+       "...       ...  ...       ...   ...          ...           ...  ...       ...   \n",
+       "41101   0.358    9   -14.430     1       0.0342        0.8860  ...    0.3140   \n",
+       "41102   0.366    1    -9.954     1       0.0941        0.0996  ...    0.2610   \n",
+       "41103   0.804   10    -4.581     1       0.0355        0.0132  ...    0.1390   \n",
+       "41104   0.177    7   -16.070     1       0.0561        0.9890  ...    0.1490   \n",
+       "41105   0.123    4   -23.025     0       0.0443        0.9640  ...    0.1030   \n",
+       "\n",
+       "       valence    tempo  duration_ms  time_signature  chorus_hit  sections  \\\n",
+       "0       0.8450  185.655       173533               3    32.94975         9   \n",
+       "1       0.7970  101.801       213613               4    48.82510        10   \n",
+       "2       0.9080  115.940       223960               4    37.22663        12   \n",
+       "3       0.9670  105.592       157907               4    24.75484         8   \n",
+       "4       0.9060  114.617       245600               4    21.79874        14   \n",
+       "...        ...      ...          ...             ...         ...       ...   \n",
+       "41101   0.0361   72.272       150857               4    24.30824         7   \n",
+       "41102   0.7400  119.985       152000               4    32.53856         8   \n",
+       "41103   0.6050  119.999       227760               4    20.73371         7   \n",
+       "41104   0.5600  120.030       213387               4    21.65301        14   \n",
+       "41105   0.0297   95.182       341396               4    71.05343        15   \n",
+       "\n",
+       "       hit  decade  duration_min  \n",
+       "0        1    1960         2.892  \n",
+       "1        0    1960         3.560  \n",
+       "2        0    1960         3.733  \n",
+       "3        0    1960         2.632  \n",
+       "4        0    1960         4.093  \n",
+       "...    ...     ...           ...  \n",
+       "41101    0    2010         2.514  \n",
+       "41102    1    2010         2.533  \n",
+       "41103    1    2010         3.796  \n",
+       "41104    0    2010         3.556  \n",
+       "41105    0    2010         5.690  \n",
+       "\n",
+       "[41106 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_df['duration_min'] = round(combined_df['duration_ms']/60000, 3)\n",
+    "combined_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1545,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1557,16 +1955,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x225b7e02590>"
+       "<pymongo.results.InsertManyResult at 0x1628e858100>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
